--- a/src/exercise/01.extra-1.html
+++ b/src/exercise/01.extra-1.html
@@ -19,14 +19,14 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
 <html>
   <body>
-    <div id="root">
-      <script type="module">
-        const rootElement = document.getElementById('root')
-        const element = document.createElement('div')
-        element.textContent = 'Hello World!'
-        element.className = 'container'
-        rootElement.append(element)
-      </script>
-    </div>
+    <script type="module">
+      const rootElement = document.createElement('div')
+      rootElement.setAttribute('id', 'root')
+      document.body.append(rootElement)
+      const element = document.createElement('div')
+      element.textContent = 'Hello World!'
+      element.className = 'container'
+      rootElement.append(element)
+    </script>
   </body>
 </html>
