--- a/src/exercise/02.extra-1.html
+++ b/src/exercise/02.extra-1.html
@@ -8,7 +8,11 @@
     const rootElement = document.getElementById('root')
     const element = React.createElement('div', {
       className: 'container',
-      children: 'Hellow World',
+      children: [
+        React.createElement('span', null, 'Hello'),
+        ' ',
+        React.createElement('span', null, 'World'),
+      ],
     })
     ReactDOM.createRoot(rootElement).render(element)
   </script>
